--- a/writing/PhD.bib
+++ b/writing/PhD.bib
@@ -9834,6 +9834,15 @@
   language = {en-US}
 }
 
+@misc{zotero-1439,
+  title = {{{NativeLand}}.Ca},
+  abstract = {Welcome to Native Land. This is a resource for North Americans (and others) to find out more about local Indigenous territories and languages.},
+  file = {/home/icrichmond/Zotero/storage/TL3UWWYU/native-land.ca.html},
+  howpublished = {https://native-land.ca/},
+  journal = {Native-land.ca - Our home on native land},
+  language = {en}
+}
+
 @article{zukal2014,
   title = {White-Nose Syndrome Fungus: {{A}} Generalist Pathogen of Hibernating Bats},
   author = {Zukal, Jan and Bandouchova, Hana and Bartonicka, Tomas and Berkova, Hana and Brack, Virgil and Brichta, Jiri and Dolinay, Matej and Jaron, Kamil S. and Kovacova, Veronika and Kovarik, Miroslav and Mart??nkov??, Nat??lia and Ondracek, Karel and Rehak, Zdenek and Turner, Gregory G. and Pikula, Jiri},
