Intro/Chapter 1 (May 11, 2021)

--- a/writing/Introduction.Rmd
+++ b/writing/Introduction.Rmd
@@ -9,7 +9,7 @@ bibliography: PhD.bib
 fontsize: 12pt
 ---
 
-Urban landscapes are a complex combination of natural, physical, social, and built elements [@pickett2017]. The integration of natural with social and built elements results in a diverse and unique array of ecosystems within the urban landscape. Throughout cities, the natural, physical, social, and built elements can benefit the people living there. Globally, urban populations continue to increase in part due to the nature of city's centralized design, which allows residents to fulfill many basic needs and access better services [@unitednations2019]. For example, living in a city can vastly increase the quality and quantity of services accessible to you, such as waste management, water treatment, and higher quality education [@unitednations2019]. Many benefits of cities are due to the social and built elements that are implemented. However, in addition to the benefits of urban built and social elements, the natural and physical elements of the city provide many benefits to urban dwellers. Most of the world's population currently lives in an urban area [@unitednations2019], meaning that the majority of people experience nature through the lens of the urban landscape. Contact with urban nature results in greater overall well-being, more happiness, reduced mortality, and other mental and physical health benefits [@frumkin2017]. All nature, urban and non-urban, provides specific gifts and benefits to humans that we cannot receive from built elements. However, urban nature differs in an important way, management.  
+Urban landscapes are a complex combination of natural, physical, social, and built elements [@pickett2017]. The integration of natural with social and built elements results in a diverse and unique array of ecosystems within the urban landscape. Throughout cities, the natural, physical, social, and built elements can benefit the people living there. Globally, urban populations continue to increase in part due to the nature of city's centralized design, which allows residents to fulfill many basic needs and access better services [@unitednations2019]. For example, living in a city can vastly increase the quality and quantity of services accessible to you, such as waste management, water treatment, and higher quality education [@unitednations2019]. Many benefits of cities are due to the social and built elements that are implemented. However, in addition to the benefits of urban built and social elements, the natural and physical elements of the city provide many benefits to urban dwellers. Most of the world's population currently lives in an urban area [@unitednations2019], meaning that the majority of people experience nature through the lens of the urban landscape. For example, benefits from urban trees to city residents exceed benefits from forest trees [@larouche2021]. Contact with urban nature results in greater overall well-being, more happiness, reduced mortality, and other mental and physical health benefits [@frumkin2017]. All nature, urban and non-urban, provides specific gifts and benefits to humans that we cannot receive from built elements. However, urban nature differs in an important way, management.  
 
 Everything in our cities is managed by humans, including nature. For example, the composition of the urban forest is determined by a variety of stakeholders [@aronson2017]. Urban planners, residents, and developers all make decisions regarding management, which inevitably impact the density and species of trees that make up the urban forest. Often, the goal of urban nature management is to design spaces in a way that maximizes benefits to urban dwellers. However, depending on the stakeholder, maximizing human benefit can look very different [@salmond2016]. For example, municipal planners want to have low levels of maintenance and are often guided by ecologically determined "best practices" for planting, whereas residents may be trying to maximize benefits such as food production or aesthetic beauty. Further, management occurs on vastly different scales, with municipal governments attempting to manage at a city or landscape scale, whereas private land owners are often managing at a parcel level. Because of disparate interests and scales, attempting to manage urban nature in a holistic way that meets everyone's needs and benefits all stakeholders has been referred to as a "wicked" problem [@gaston2013].  
 
@@ -35,6 +35,7 @@ My proposed thesis will investigate spatial and temporal variation in the delive
 \newpage
 # Study Area(s)
 My work will take place on the unceded and traditional lands of the Haudenosaunee and Mohawk peoples [@zotero-1439]. Before outlining my data collection and analysis methods, I believe it is important to acknowledge and outline my positionality. One's positionality refers to the space they occupy in relation to their research [@alcoff1988]. Discussing and acknowledging positionality is a widely accepted and encouraged part of scholarship for many disciplines, mainly in the social sciences [@england1994]. Natural science has so far gotten away without this important practice because of the belief that our research is "objective". However, my training and approach to the natural sciences is directly informed by my privilege, worldview, and experiences. As such, I believe that by outlining my biases and approach, I give context and credibility to the work I will do and provide a critical step in reproducible and transparent research. I am approaching this research as a descendent of white settler-colonial Europeans who grew up on the traditional and unceded homelands of the Haudenosaunee, Anishinaabe, and Attiwonderonk Peoples. My privilege as a cisgender, white, settler researcher directly informs the questions I ask and the science I produce. My training and approach to natural science is informed by a Eurocentric worldview, which means that I have been trained to view humans and nature as distinct entities and use a reductionist approach. My approach is not better or worse than others, however, it does inform how I will ask and answer questions in this system.
+
 
 
 \newpage
