Update Chapter 1/Intro

--- a/writing/Chapter1.Rmd
+++ b/writing/Chapter1.Rmd
@@ -9,16 +9,16 @@ bibliography: PhD.bib
 fontsize: 12pt
 ---
 
-The urban forest is a critical part of our urban landscapes. The urban forest is composed of all the trees found in a city and provides regulatory, provisioning, supporting, and cultural ecosystem services to residents [@milenniumecosystemassessment2005]. Importantly, the urban forest provides critical regulating services in cities that improve quality of life and health of urban residents. One of the most well-known examples of the urban forest's contribution to regulating the urban ecosystem is the ability of urban trees to cool our cities during hot days, reducing the urban heat island effect. The shade provided by urban trees can reduce temperatures by several degrees, potentially reducing air temperatures from dangerous levels. Temperature regulation is just one example of the critical regulating services the urban forest provides. The urban forest can also reduce air pollution, sequester carbon, flood control, and noise reduction [@andersson2015]. The ecosystem services provided by the urban forest is dependent on its composition, structure, and management.  
+The urban forest provides critical ecosystem services to urban residents. All of the trees found in a city contribute to the urban forest and provide regulatory, provisioning, supporting, and cultural ecosystem services to residents [@milenniumecosystemassessment2005]. The urban forest provides regulating ecosystem services in cities that improve quality of life and health of urban residents. Importantly, regulating services must be provided *in situ* and cannot be outsourced from locations surrounding the city. Thus, the management, production, and provision of regulating ecosystem services is a key issue facing metropolitan areas. One of the most well-known examples of the urban forest's contribution to regulating the urban ecosystem is the ability of urban trees to buffer against the urban heat island effect (REFS). The shade and evapotranspiration provided by urban trees can reduce urban temperatures by several degrees, potentially reducing air temperatures from dangerous levels. In addition to temperature regulation, the urban forest also reduces air pollution, sequesters carbon, provides flood control, and promotes noise reduction [@andersson2015]. The ability of the urban forest to provide regulating ecosystem services is dependent on its composition, structure, and management.  
 
-As part of a city, the urban forest is similarly dynamic and heterogeneous. There are many factors that impact the current ecosystem services delivered by urban trees. There have been many studies examining the various ecosystem services delivered by our urban forests (refs). However, the delivery of ecosystem services is dependent on many factors, such as biodiversity, size, spatial distribution of trees, density, soil type, and more (refs). Due to the complex nature of the drivers of urban forest ecosystem services, many studies have investigated drivers on a small scale. For example, investigating how neighbourhood composition influences temperature regulation (pham). Further, many studies to date have focused on only one ecosystem service, such as temperature regulation (refs). Single-city or single-service studies have formed the backbone of today's urban ecosystem service literature. With the strong foundation, we can now investigate these services on a variety of scales.  
+Similar to the city it is a part of, the urban forest is dynamic and heterogeneous. There are many factors that impact the current ecosystem services delivered by the urban forest. Further, the provision of ecosystem services by the urban forest is dependent on the spatial and temporal scale of interest. Factors such as biodiversity, parcel size, spatial distribution of trees, density, soil type, past land use type, and more determine the production and subsequent delivery of ecosystem services by the urban forest (REFS). Due to the complex nature of the drivers of urban forest ecosystem services and lack of baseline knowledge, many studies to date have approached urban forest ecosystem services by looking at a single location or a single service. Now, with the strong foundation provided by detailed single-service and single-city studies, we can investigate the dynamic and heterogeneous nature of urban forest ecosystem services on a variety of scales.  
 
-We use a framework of "large-scale" and "fine-scale" drivers of ecosystem services. We would expect fine-scale drivers to be place-specific and influence ecosystem services on a specific spatial scale. For example, we would expect different cities to have various different fine-scale drivers that influence one city's provision of ecosystem services but not the other. For example, varying cultures and population demographics may result in different drivers of cultural ecosystem services in different cities. Conversely, large-scale drivers are processes that influence ecosystem services on a large spatial scale. These are processes that consistently influence the provision of ecosystem services, although the magnitude may shift depending on spatial context. For example, biodiversity of the urban forest most may influence the provision of ecosystem services, regardless of which city you are investigating. Our study's goals is to uncover some of the large-scale drivers of urban forest ecosystem services using a cross-city, multi-service approach. Specifically, we will ask:
+We propose a framework of "cross-city" and "location-specific" drivers of ecosystem services in the urban forest. We would expect location-specific drivers to be unique to individual places and influence ecosystem services on a specific spatial scale. We would expect different cities to have various different location-specific drivers that influence one city's provision of ecosystem services but not another's. For example, different management practices in different municipalities may lead to different tree sizes, and thus result in a location-specific driver of aboveground carbon storage. Conversely, cross-city drivers are processes that influence ecosystem services in multiple locations and across spatial scales. These are processes that consistently influence the provision of ecosystem services, although the magnitude may shift depending on spatial context. For example, biodiversity of the urban forest may influence the provision of ecosystem services, regardless of which city or at what scale you are investigating. Our study's goals is to identify and differentiate between cross-city and location-specific drivers of urban forest ecosystem services using a cross-city, multi-scale, multi-service approach. Specifically, we will ask:
 
-> What are the large-scale factors driving regulatory ecosystem services provided by the urban forest in Canadian temperate cities?
+> What are the cross-city drivers of regulatory ecosystem services provided by the urban forest in Canadian temperate cities?
 
 # Approach  
-We will use existing, publicly available data to test ecosystem services and their drivers in seven major temperate Canadian cities (Vancouver, Calgary, Winnipeg, Toronto, Ottawa, Montreal, Halifax). Using remotely sensed data we will measure proxies for three regulatory ecosystem services, temperature regulation, carbon sequestration, and air pollution mitigation. Using a combination of urban tree inventories, land cover maps, and census data we will have three groups of independent variables: natural, built infrastructure, and human demographics. Our natural variables will include previously established important variables such as biodiversity, tree size, and tree density. Built infrastructure will include variables such as road width and % grey, which have been previously shown to influence ecosystem service provision. Finally, our human demographics will include variables such as population density and socioeconomic status. We will conduct this study on three scales: street, neighbourhood, and city. The goal of this study is to determine if there are any common drivers of urban forest ecosystem services across Canadian cities.
+We will use existing, publicly available data to test ecosystem services and their drivers in seven major temperate Canadian cities: Vancouver, Calgary, Winnipeg, Toronto, Ottawa, Montreal, Halifax. We will test drivers of ecosystem services at three scales within the cities, fine-scale (street level), medium-scale (neighbourhood level), and large scale (city level). Using remotely sensed data we will measure proxies for three regulatory ecosystem services, temperature regulation, carbon sequestration, and air pollution mitigation. Using a combination of urban tree inventories, land cover maps, and census data we will have three groups of independent variables: natural, built infrastructure, and human demographics. Our natural variables will include previously established important variables such as biodiversity, tree size, and tree density. Built infrastructure will include variables such as road width and % grey. Finally, our human demographics will include variables such as population density and socioeconomic status. The goal of this study is to determine which drivers, if any, are cross-city for urban forest ecosystem services in Canadian cities.
 
 # Status  
 
