--- a/writing/PhD.bib
+++ b/writing/PhD.bib
@@ -377,20 +377,6 @@
   number = {2}
 }
 
-@article{larouche2021,
-  title = {Urban Forestry Research Needs Identified by {{Canadian}} Municipalities},
-  author = {Larouche, Jacques and Rioux, Danny and Bardekjian, Adrina C. and G{\'e}linas, Nancy},
-  year = {2021},
-  month = apr,
-  pages = {1--10},
-  issn = {0015-7546, 1499-9315},
-  doi = {10.5558/tfc2021-011},
-  abstract = {At a time when the future of our planet remains fraught with uncertainty, interest in the state and role of forests, especially in urban settings, is growing rapidly. Our project, based on a Canada-wide survey, identifies the research needs of 192 municipalities of 5000 inhabitants or more, and verifies whether the size of the municipality, the region or the canopy have an impact on these needs. The numerous needs identified by municipalities show that there is a strong demand for research in this area. In particular, municipalities want to know: a) which tree species are better adapted to urban settings; b) the effects of trees on rainwater runoff and on human health; and c) that more studies be conducted on topics such as trees and infrastructure, on hazardous trees, on invasive plant species, and on various tree pests. Our analysis reveals that small municipalities are less interested in certain needs than larger municipalities, and that municipalities in the Maritimes region show more interest in certain topics than those in other Canadian regions. Results also reveal that urban forest canopy size has no influence on the identified needs. This study allows researchers to better define their projects, and it highlights the importance of improving knowledge exchange with and among key stakeholders in cities actively pursuing and interested in urban forestry activities.},
-  file = {/home/icrichmond/Zotero/storage/S4R6P56K/Larouche et al. - 2021 - Urban forestry research needs identified by Canadi.pdf},
-  journal = {The Forestry Chronicle},
-  language = {en}
-}
-
 @article{lepczyk2017,
   title = {Biodiversity in the {{City}}: {{Fundamental Questions}} for {{Understanding}} the {{Ecology}} of {{Urban Green Spaces}} for {{Biodiversity Conservation}}},
   author = {Lepczyk, Christopher A and Aronson, Myla F J and Evans, Karl L and Goddard, Mark A and Lerman, Susannah B and Macivor, J Scott},
@@ -455,22 +441,6 @@
   journal = {Journal of Environmental Quality},
   language = {en},
   number = {1}
-}
-
-@article{matthews2021,
-  title = {The P-Value Statement, Five Years On},
-  author = {Matthews, Robert},
-  year = {2021},
-  volume = {18},
-  pages = {16--19},
-  issn = {1740-9713},
-  doi = {10.1111/1740-9713.01505},
-  abstract = {The American Statistical Association's 2016 p-value statement generated debates and disagreements, editorials and symposia, and a plethora of ideas for how science could be changed for the better. Now, five years on, Robert Matthews asks what, if anything, has the statement achieved?},
-  annotation = {\_eprint: https://rss.onlinelibrary.wiley.com/doi/pdf/10.1111/1740-9713.01505},
-  file = {/home/icrichmond/Zotero/storage/9W7872ZU/Matthews - 2021 - The p-value statement, five years on.pdf;/home/icrichmond/Zotero/storage/ALU5YNG4/1740-9713.html},
-  journal = {Significance},
-  language = {en},
-  number = {2}
 }
 
 @article{mcdonald2020,
@@ -720,6 +690,22 @@
   language = {French}
 }
 
+@article{remme2021,
+  title = {An Ecosystem Service Perspective on Urban Nature, Physical Activity, and Health},
+  author = {Remme, Roy P. and Frumkin, Howard and Guerry, Anne D. and King, Abby C. and Mandle, Lisa and Sarabu, Chethan and Bratman, Gregory N. and {Giles-Corti}, Billie and Hamel, Perrine and Han, Baolong and Hicks, Jennifer L. and James, Peter and Lawler, Joshua J. and Lindahl, Therese and Liu, Hongxiao and Lu, Yi and Oosterbroek, Bram and Paudel, Bibek and Sallis, James F. and Schipperijn, Jasper and Sosi{\v c}, Rok and {de Vries}, Sjerp and Wheeler, Benedict W. and Wood, Spencer A. and Wu, Tong and Daily, Gretchen C.},
+  year = {2021},
+  month = jun,
+  volume = {118},
+  pages = {e2018472118},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.2018472118},
+  abstract = {Nature underpins human well-being in critical ways, especially in health. Nature provides pollination of nutritious crops, purification of drinking water, protection from floods, and climate security, among other well-studied health benefits. A crucial, yet challenging, research frontier is clarifying how nature promotes physical activity for its many mental and physical health benefits, particularly in densely populated cities with scarce and dwindling access to nature. Here we frame this frontier by conceptually developing a spatial decision-support tool that shows where, how, and for whom urban nature promotes physical activity, to inform urban greening efforts and broader health assessments. We synthesize what is known, present a model framework, and detail the model steps and data needs that can yield generalizable spatial models and an effective tool for assessing the urban nature\textendash physical activity relationship. Current knowledge supports an initial model that can distinguish broad trends and enrich urban planning, spatial policy, and public health decisions. New, iterative research and application will reveal the importance of different types of urban nature, the different subpopulations who will benefit from it, and nature's potential contribution to creating more equitable, green, livable cities with active inhabitants.},
+  file = {/home/icrichmond/Zotero/storage/BH4U7LB3/Remme et al. - 2021 - An ecosystem service perspective on urban nature, .pdf},
+  journal = {Proceedings of the National Academy of Sciences},
+  language = {en},
+  number = {22}
+}
+
 @article{roman2018,
   title = {Human and Biophysical Legacies Shape Contemporary Urban Forests: {{A}} Literature Synthesis},
   shorttitle = {Human and Biophysical Legacies Shape Contemporary Urban Forests},
@@ -836,24 +822,6 @@
   file = {/home/icrichmond/Zotero/storage/5V2256UT/Tappeiner2020_Article_HowToConsiderHistoryInLandscap.pdf;/home/icrichmond/Zotero/storage/MH4V4JHD/Tappeiner et al. - 2020 - How to consider history in landscape ecology patt.pdf},
   journal = {Landscape Ecology},
   language = {en}
-}
-
-@article{tatsumi2021,
-  title = {Temporal Changes in Spatial Variation: Partitioning the Extinction and Colonisation Components of Beta Diversity},
-  shorttitle = {Temporal Changes in Spatial Variation},
-  author = {Tatsumi, Shinichi and Iritani, Ryosuke and Cadotte, Marc W.},
-  year = {2021},
-  volume = {24},
-  pages = {1063--1072},
-  issn = {1461-0248},
-  doi = {10.1111/ele.13720},
-  abstract = {The last two decades have witnessed unprecedented changes in beta diversity, the spatial variation in species composition, from local to global scales. However, analytical challenges have hampered empirical ecologists from quantifying the extinction and colonisation processes behind these changing beta diversity patterns. Here, we develop a novel numerical method to additively partition the temporal changes in beta diversity into components that reflect local extinctions and colonisations. By applying this method to empirical datasets, we revealed spatiotemporal community dynamics that were otherwise undetectable. In mature forests, we found that local extinctions resulted in tree communities becoming more spatially heterogeneous, while colonisations simultaneously caused them to homogenise. In coral communities, we detected non-random community disassembly and reassembly following an environmental perturbation, with a temporally varying balance between extinctions and colonisations. Partitioning the dynamic processes that underlie beta diversity can provide more mechanistic insights into the spatiotemporal organisation of biodiversity.},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/ele.13720},
-  file = {/home/icrichmond/Zotero/storage/QGP7BDCG/Tatsumi et al. - 2021 - Temporal changes in spatial variation partitionin.pdf;/home/icrichmond/Zotero/storage/2FCKL5NZ/ele.html},
-  journal = {Ecology Letters},
-  keywords = {Biotic homogenisation,community assembly,metacommunity,spatial heterogeneity,species turnover,temporal ecology},
-  language = {en},
-  number = {5}
 }
 
 @article{tomscha2016,
